# histocartography

./: .gitignore  README_quickstart.md  batch_runner.py  config.yaml  pyproject.toml  requirements.txt  run_nuclei_graphs_local.py  slurm_example.sh  slurm_nuclei_graphs.sh  slurm_vista_nuclei_graphs.sh  test_qc_summary.csv  verify_features.py
histocartography_ext/: __init__.py  pipeline.py  pipeline_config.py  pipeline_runner.py
histocartography_ext/features/: __init__.py  __main__.py  deep_features.py  extract.py  gnn.py  handcrafted.py  node_features.py
histocartography_ext/interpretability/: graph_pruning_explainer.py
histocartography_ext/ml/layers/: gin_layer.py  multi_layer_gnn.py
histocartography_ext/ml/models/: base_model.py
histocartography_ext/nuclei/: __init__.py  checkpoints.py  download.py  inference.py  postprocess.py  run_batch.py  segmentation.py  utils.py
histocartography_ext/preprocessing/: README.md  feature_extraction.py  graph_builder_pyg.py  nuclei_extraction.py  superpixel.py
histocartography_ext/utils/: graph.py  reproducibility.py
histocartography_ext/visualization/: __init__.py  qc.py
scripts/: aggregate_qc.py
test/: test_batch_runner_cli.py  test_pipeline_runner.py
test/features/: test_deep_features.py  test_node_features.py
test/nuclei/: test_checkpoint_loader.py  test_nuclei_segmentation.py  test_segmentation_stitching.py
test_qc_output/: qc_metrics.json
tests/: test_graph_builder_pyg.py  verify_qc.py
