[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "histocartography_ext"
version = "0.3.0"
description = "Extended Histocartography package for nuclei segmentation and graph construction"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Original Authors: Guillaume Jaume, Pushpak Pati, Antonio Foncubierta Rodríguez"},
    {name = "Fork Maintainer"}
]
dependencies = [
    "torch>=2.0.0,<2.3.0",
    "torchvision>=0.15.0,<0.18.0",
    "torchdata>=0.5.0,<0.8.0",
    "dgl>=1.1.0,<2.2.0",
    "pydantic",
    "opencv-python-headless<4.10.0",
    "scikit-image",
    "shapely",
    "networkx",
    "numpy>=1.14.0,<2",
    "pandas",
    "h5py",
    "tqdm",
    "matplotlib",
    "pillow",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "seaborn"
]

[project.urls]
Homepage = "https://github.com/BiomedSciAI/histocartography"

[tool.setuptools.packages.find]
where = ["."]
include = ["histocartography_ext*"]
